--- a/src/App.css
+++ b/src/App.css
@@ -116,6 +116,7 @@ img {
 /*=============== REUSABLE CSS CLASSES ===============*/
 .section {
   padding: 6rem 0 2rem;
+  min-height: 100vh;
 }
 
 .section__title {
@@ -170,7 +171,7 @@ img {
 }
 
 /*=============== BREAKPOINTS ===============*/
-/* For large devices */
+
 @media screen and (max-width: 992px) {
   .container {
     margin-left: var(--mb-1-5);
@@ -187,7 +188,6 @@ img {
   }
 }
 
-/* For medium devices */
 @media screen and (max-width: 768px) {
   body {
     margin: 0 0 var(--header-height) 0;
@@ -205,7 +205,6 @@ img {
 @media screen and (max-width: 576px) {
 }
 
-/* For small devices */
 @media screen and (max-width: 350px) {
   :root {
     --big-font-size: 2.25rem;
