--- a/src/index.css
+++ b/src/index.css
@@ -1,56 +1,84 @@
-/*=============== GOOGLE FONTS ===============*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
-/*=============== VARIABLES CSS ===============*/
-:root {
-  --header-height: 3rem;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  /*========== Colors ==========*/
-  /*Color mode HSL(hue, saturation, lightness)*/
-  --hue: 0;
-  --sat: 0%;
-  --title-color: hsl(var(--hue), var(--sat), 20%);
-  --title-color-dark: hsl(var(--hue), var(--sat), 0%);
-  --text-color: hsl(var(--hue), var(--sat), 46%);
-  --body-color: hsl(var(--hue), var(--sat), 98%);
-  --container-color: #fff;
-
-  /*========== Font and typography ==========*/
-  --body-font: "Poppins", sans-serif;
-
-  /*.5rem = 8px | 1rem = 16px ...*/
-  --big-font-size: 2.5rem;
-  --h1-font-size: 2.25rem;
-  --h2-font-size: 1.5rem;
-  --h3-font-size: 1.25rem;
-  --normal-font-size: 1rem;
-  --small-font-size: 0.875rem;
-  --smaller-font-size: 0.813rem;
-  --tiny-font-size: 0.625rem;
-
-  /*========== Font weight ==========*/
-  --font-normal: 400;
-  --font-medium: 500;
-  --font-semi-bold: 600;
-
-  /*========== Margenes Bottom ==========*/
-  /*.5rem = 8px | 1rem = 16px ...*/
-  --mb-0-25: 0.25rem;
-  --mb-0-5: 0.5rem;
-  --mb-0-75: 0.75rem;
-  --mb-1: 1rem;
-  --mb-1-5: 1.5rem;
-  --mb-2: 2rem;
-  --mb-2-5: 2.5rem;
-  --mb-3: 3rem;
-
-  /*========== z index ==========*/
-  --z-tooltip: 10;
-  --z-fixed: 100;
-  --z-modal: 1000;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-/* Responsive typography */
+@layer base {
+  :root {
+    --container-color: #fff;
+    --text-color: hsl(0, 0%, 19%);
+    --body-color: hsl(0, 0%, 100%);
+    --title-color: hsl(0, 0%, 20%);
+    --title-color-dark: #000000;
+    --body-font: "Poppins", sans-serif;
+    --accent-color: rgb(0, 235, 200);
+  }
+
+  :root[class~="dark"] {
+    --container-color: #000;
+    --text-color: hsl(0, 0%, 91%);
+    --body-color: hsl(0, 0%, 5%);
+    --title-color: hsl(0, 0%, 100%);
+    --title-color-dark: #ffffff;
+  }
+
+  html {
+    scroll-behavior: smooth;
+  }
+
+  body {
+    font-family: var(--body-font);
+    color: var(--text-color);
+  }
+
+  body,
+  button,
+  input,
+  textarea {
+    font-family: var(--body-font);
+  }
+
+  ul {
+    list-style: none;
+  }
+
+  a {
+    text-decoration: none;
+  }
+
+  button {
+    cursor: pointer;
+    border: none;
+    outline: none;
+  }
+
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  h1 {
+    @apply text-4xl;
+  }
+
+  h2 {
+    @apply text-2xl;
+  }
+
+  h2 {
+    @apply text-xl;
+  }
+}
+
+/* 
+
 @media screen and (max-width: 992px) {
   :root {
     --big-font-size: 2rem;
@@ -63,7 +91,7 @@
   }
 }
 
-/*=============== BASE ===============*/
+
 * {
   margin: 0;
   padding: 0;
@@ -113,7 +141,7 @@ img {
   height: auto;
 }
 
-/*=============== REUSABLE CSS CLASSES ===============*/
+
 .section {
   padding: 6rem 0 2rem;
 }
@@ -134,7 +162,6 @@ img {
   text-align: center;
 }
 
-/*=============== LAYOUT ===============*/
 .container {
   max-width: 968px;
   margin-left: auto;
@@ -146,7 +173,7 @@ img {
   gap: 1.5rem;
 }
 
-/*=============== BUTTONS ===============*/
+
 .button {
   display: inline-block;
   background-color: var(--title-color);
@@ -169,7 +196,7 @@ img {
   align-items: center;
 }
 
-/*=============== BREAKPOINTS ===============*/
+
 
 @media screen and (max-width: 992px) {
   .container {
@@ -213,4 +240,4 @@ img {
     margin-left: var(--mb-1);
     margin-right: var(--mb-1);
   }
-}
+}  */
