--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -11,7 +11,7 @@
     --body-color: hsl(0, 0%, 100%);
     --title-color: hsl(0, 0%, 20%);
     --title-color-dark: #000000;
-    --body-font: "Poppins", sans-serif;
+    --body-font: "Exo 2", sans-serif;
     --accent-color: rgb(0, 235, 200);
   }
 
